--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/font": "13.4.1",
     "axios": "^1.4.0",
-    "next": "13.4.1",
+    "next": "^13.4.1",
+    "nextjs": "^0.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
